--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<h2 class="frame-2">India's Largest Tech Community</h2>
 				<h2 class="frame-3">
 					<span>GirlScript</span>
-					<span>Website</span>
+					<span>Site</span>
 					<span>Boilerplate</span>
 				</h2>
 			</div>
