Minor change in the text part

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 				<h2 class="frame-2">India's Largest Tech Community</h2>
 				<h2 class="frame-3">
 					<span>GirlScript</span>
+					<span>Bhubaneswar</span>
 					<span>Website</span>
-					<span>Boilerplate</span>
 				</h2>
 			</div>
 			<div class="img-front"></div>
