First changes in about section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 	<head>
-		<title>GirlScript Website Boilerplate</title>
+		<title>GirlScript Bhubaneswar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
 		<meta name="google-site-verification" content="e0dcB4k63dAZ7bMt_F9jWwZadbNO18iuZ_NZKDEavJs" />
@@ -105,6 +105,9 @@
 		<script>
 			document.getElementsByTagName('html')[0].className += ' Q_js'; // better than noscript
 		</script>
+
+		<!-- typed js CDN -->
+		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 	</head>
 
 	<body>
@@ -123,7 +126,8 @@
 				<h2 class="frame-3">
 					<span>GirlScript</span>
 					<span>Bhubaneswar</span>
-					<span>Website</span>
+					<br>
+					<span><a style="color: #f47621;" href="#" class="hero-fig-button btn">Join Us</a></span>
 				</h2>
 			</div>
 			<div class="img-front"></div>
@@ -165,9 +169,11 @@
 
 						<br />
 						<p class="about-para">
-							<a href="#" class="clr-theme fw-bold">GirlScript Chennai</a> is India's fastest growing tech
-							community at the heart of Chennai. We believe in uplifting beginners in tech while promoting
+							<a href="#" class="clr-theme fw-bold">GirlScript Bhubaneswar</a> is Odisha's fastest growing tech
+							community at the heart of Bhubaneswar. We believe in uplifting beginners in tech while promoting
 							diversity.
+							<br>
+							We are a community of <span id="typed"></span>
 						</p>
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-12 text-center">
@@ -188,7 +194,7 @@
 			</div>
 		</div>
 		<section class="newsection p-5" id="initiativesSection">
-			<h2 class="pt-2 pb-5 text-center fw-bold heading">OUR <span class="clr-theme fw-100">INITIATIVES</span></h2>
+			<h2 class="pt-2 pb-5 text-center fw-bold heading">Our <span class="clr-theme fw-100">Programs</span></h2>
 
 			<div class="initiatives-cards forScrollCards">
 				<div class="upper" id="initiatives-upper">
