--- a/index.html
+++ b/index.html
@@ -11,59 +11,59 @@
 		/>
 		<meta
 			name="description"
-			content="This website is a base for Chennai chapter, and serves a template for other chapters. All the channel-specific tech events, coding competitions, and other resources are mentioned in this website."
+			content="Explore tech events, coding competitions, and other resources from GirlScript Bhubaneswar Chapter."
 		/>
 
-		<meta name="application-name" content="GirlScript Website Boilerplate" />
-		<meta name="author" content="Smaranjit Ghose" />
+		<meta name="application-name" content="GirlScript Bhubaneswar Website" />
+		<meta name="author" content="GirlScript Bhubaneswar" />
 
 		<meta name="robots" content="index,follow" />
 		<meta name="Googlebot" content="index,follow" />
 		<meta name="AdsBot-Google" content="index,follow" />
 
-		<meta name="designer" content="GirlScript Website Boilerplate" />
-		<meta name="copyright" content="Anush Bhatia" />
+		<meta name="designer" content="GirlScript Bhubaneswar" />
+		<meta name="copyright" content="GirlScript Bhubaneswar" />
 
 		<meta
 			name="abstract"
-			content="This is an open source project for creating a website that shall serve as a boilerplate for various chapters of GirlScript."
+			content="This website is a base for Bhubaneswar chapter. All the channel-specific tech events, coding competitions, and other resources are mentioned in this website."
 		/>
 
-		<meta name="topic" content="GirlScript Website Boilerplate" />
+		<meta name="topic" content="GirlScript Bhubaneswar" />
 
 		<meta
 			name="summary"
-			content="This is an open source project for creating a website that shall serve as a boilerplate for various chapters of GirlScript."
+			content="This is an open source project for creating a website that shall serve as a boilerplate for various chapters of GirlScript.This website is a base for Bhubaneswar chapter. All the channel-specific tech events, coding competitions, and other resources are mentioned in this website."
 		/>
 
 		<meta
 			name="msapplication-tooltip"
-			content="This is an open source project for creating a website that shall serve as a boilerplate for various chapters of GirlScript."
+			content="This website is a base for Bhubaneswar chapter. All the channel-specific tech events, coding competitions, and other resources are mentioned in this website.."
 		/>
 
-		<meta name="apple-mobile-web-app-title" content="GirlScript Website Boilerplate" />
+		<meta name="apple-mobile-web-app-title" content="GirlScript Bhubaneswar" />
 
-		<meta name="og:site_name" content="https://girlscriptboilerplate.netlify.app/" />
-		<meta name="og:title" content="GirlScript Website Boilerplate" />
-		<meta name="og:url" content="https://girlscriptboilerplate.netlify.app/" />
+		<meta name="og:site_name" content="https://girlscript-bhubaneswar.netlify.app/" />
+		<meta name="og:title" content="GirlScript Bhubaneswar" />
+		<meta name="og:url" content="https://girlscript-bhubaneswar.netlify.app/" />
 		<meta name="og:image" content="assets/Images/logo/logo_for_boilerplate_1.png" />
 		<meta property="og:type" content="website" />
 
 		<link rel="icon" href="assets/Images/logo/gs.png" type="image/png" sizes="16x16" />
 
-		<link rel="index" title="GirlScript Website Boilerplater" href="https://girlscriptboilerplate.netlify.app/" />
+		<link rel="index" title="GirlScript Bhubaneswar" href="https://girlscript-bhubaneswar.netlify.app/" />
 
-		<link rel="start" title="GirlScript Website Boilerplate" href="https://girlscriptboilerplate.netlify.app/" />
+		<link rel="start" title="GirlScript Bhubaneswar" href="https://girlscript-bhubaneswar.netlify.app/" />
 
-		<link rel="prev" title="GirlScript Website Boilerplater" href="https://girlscriptboilerplate.netlify.app/" />
+		<link rel="prev" title="GirlScript Bhubaneswar" href="https://girlscript-bhubaneswar.netlify.app/" />
 
-		<link rel="next" title="GirlScript Website Boilerplate" href="https://girlscriptboilerplate.netlify.app/" />
+		<link rel="next" title="GirlScript Bhubaneswar" href="https://girlscript-bhubaneswar.netlify.app/" />
 
 		<link
 			rel="search"
-			href="https://girlscriptboilerplate.netlify.app/"
+			href="https://girlscript-bhubaneswar.netlify.app/"
 			type="application/opensearchdescription+xml"
-			title="GirlScript Website Boilerplate"
+			title="GirlScript Bhubaneswar"
 		/>
 
 		<!-- Google Font Api -->
