Removed page links from header with some minor improvements

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 				<!-- Cards will be generated dynamically -->
 			</div>
 
-			<a href="contactUs.html" class="center-btn-settings btn btn-lg mt-5">Get In Touch</a>
+			<a href="#footer" class="center-btn-settings btn btn-lg mt-5">Get In Touch</a>
 		</section>
 
 		<!-- upcoming events  -->
@@ -297,7 +297,7 @@
 		<section class="recent-events" id="recentEvents">
 			<div class="container pt-5 pb-5">
 				<h2 class="font-weight-bolder text-center heading">
-					RECENT
+					PAST
 					<span class="clr-theme fw-100"> EVENTS</span>
 				</h2>
 				<hr class="mw-100 line" />
