--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		<meta name="og:image" content="assets/Images/logo/logo_for_boilerplate_1.png" />
 		<meta property="og:type" content="website" />
 
-		<link rel="icon" href="assets/Images/logo/gs.png" type="image/png" sizes="16x16" />
+		<!-- favicon -->
+		<link rel="icon" href="assets/Images/index/favicon_gs.png" type="image/png" sizes="16x16" />
 
 		<link rel="index" title="GirlScript Bhubaneswar" href="https://girlscript-bhubaneswar.netlify.app/" />
 
@@ -109,6 +110,8 @@
 
 		<!-- typed js CDN -->
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+
+		<!-- favicon -->
 	</head>
 
 	<body>
