Dark mode bug and team page enhancement

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
 		<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
 		<link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
-		<link rel="stylesheet" href="css/style1.css" type="text/css" />
 
 		<script>
 			document.getElementsByTagName('html')[0].className += ' Q_js'; // better than noscript
@@ -209,11 +208,7 @@
 			</div>
 		</section>
 
-		<div>
-			<div class="parallax1">
-				<div class="parashadow"></div>
-			</div>
-		</div>
+
 
 		<section class="pt-5 pb-5 newsection bg-lgt-grey" id="achievementsSection">
 			<div class="container myDiv1">
@@ -281,6 +276,12 @@
 			<a href="#footer" class="center-btn-settings btn btn-lg mt-5">Get In Touch</a>
 		</section>
 
+		<div>
+			<div class="parallax1">
+				<div class="parashadow"></div>
+			</div>
+		</div>
+
 		<!-- upcoming events  -->
 		<section class="upcoming-events" id="eventsSection">
 			<div class="container pt-5 pb-5">
@@ -307,6 +308,12 @@
 				</div>
 			</div>
 		</section>
+
+		<div>
+			<div class="parallax1">
+				<div class="parashadow"></div>
+			</div>
+		</div>
 
 
 		<section id="team">
@@ -558,7 +565,7 @@
 							</div>
 						</div>
 					</div>
-					<a class="carousel-control-prev w-auto ml-2" href="#recipeCarousel" data-slide="prev">
+					<a class="carousel-control-prev w-auto" href="#recipeCarousel" data-slide="prev">
 						<button type="button" class="btn btn-dark rounded-circle"><i class="fa fa-chevron-left clr-wt"></i></button> 
 						<span class="sr-only">Previous</span>
 					</a>
