made footer shuttle

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 		</section>
 		<!-- Carousel -->
 
-		<div class="container text-center">
+		<div class="container text-center" style="padding-bottom:80px;">
 			<div class="row mx-auto my-auto">
 				<div id="recipeCarousel" class="carousel slide w-100" data-ride="carousel">
 					<div class="carousel-inner w-100" role="listbox">
