footer changed and timeline added

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
 					<h2 class="pt-5 pb-2 text-center fw-bold heading">
 						OUR <span class="clr-theme fw-100">TEAM</span>
 					</h2>
+					<hr class="mw-100 line" />
 					<h3 class="mb-5 text-center join-us">
 						We've got a strong team filled with caffeine addicted developers, gradient loving designers
 						and machine like working chapter leads.
