--- a/index.html
+++ b/index.html
@@ -259,22 +259,22 @@
 			</div>
 		</div>
 
-		<section class="newsection p-5" id="newsSection">
+		<!-- <section class="newsection p-5" id="newsSection">
 			<h2 class="pt-5 pb-2 text-center fw-bold heading">
 				WE CREATE TRENDS <span class="clr-theme fw-100">FOR THE WORLD </span>
 			</h2>
 			<h3 class="mb-5 text-center join-us">Join us and get a chance to learn</h3>
 
 			<div class="feature-cards scroll-feature-cards" id="trends-top">
-				<!-- Cards will be generated dynamically -->
+				Cards will be generated dynamically
 			</div>
 
 			<div class="feature-cards scroll-feature-cards" id="trends-bottom">
-				<!-- Cards will be generated dynamically -->
+				Cards will be generated dynamically
 			</div>
 
 			<a href="#footer" class="center-btn-settings btn btn-lg mt-5">Get In Touch</a>
-		</section>
+		</section> -->
 
 		<div>
 			<div class="parallax1">
@@ -517,7 +517,7 @@
 											<li><a href="#" class="fa fa-facebook-official"></a></li>
 											<li><a href="#" class="fa fa-twitter-square"></a></li>
 											<li><a href="https://github.com/AshutoshDash1999" target="_blank" class="fa fa-github"></a></li>
-											<li><a href="https://www.linkedin.com/in/ashutosh-dash-6a0a63169" target="_blank" class="fa fa-linkedin-square"></a></li>
+											<li><a href="https://www.linkedin.com/in/ashutoshdash1999" target="_blank" class="fa fa-linkedin-square"></a></li>
 										</ul>
 									</div>
 								</div>
